test/fails/bad_casts/basics1.lgl
type a is float[2];
type b is float[2];

void main() {
    a avec = [1., 2.];
    b fail = avec in b; //No path
}